flask_mysql/MySQLConnectionErrors.txt
1.mysql.connector.errors.ProgrammingError: 1045 (28000): Access denied for user 'root'@'localhost' (using password: NO)
fix: Make sure you supplied the correct password value to self.config.password

2. qlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (2003, "Can't connect to MySQL server on '127.0.0.1' (61)")
port does not match

3.sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (1045, "Access denied for user 'rot'@'localhost' (using password: YES)")
User name does not match

4. raceback (most recent call last):
  File "server.py", line 3, in <module>
    from mysqlconnection import MySQLConnector
  File "/Users/nabz24/Documents/codingDojo/Python/flask_mysql/mysqlconnection.py", line 10
    'database': , # we got db as an argument
                ^
SyntaxError: invalid syntax
no database argument
